Tue Aug 24 00:36:17 1993  Jim Kingdon  (kingdon@lioth.cygnus.com)

	* target.c, target.h: Add "set remotedebug" command.
	* remote-bug.c, remote.c, remote-mips.c: Remove "set remotedebug" and
	"set m88ksnoop" options and use generic "set remotedebug" instead.
	* NEWS: Describe this change.

Mon Aug 23 20:26:22 1993  Jim Kingdon  (kingdon@lioth.cygnus.com)

	* buildsym.h: Remove declaration of dbxread.c functions.
	* stabsread.h: Group together dbxread.c functions.
	Move elfstab_build_psymtabs here from symfile.h.
	Declare pastab_build_psymtabs.
	* elfread.c, paread.c: Include stabsread.h (for stabsread_new_init
	declaration, etc).

Mon Aug 23 17:16:23 1993  K. Richard Pixley  (rich@sendai.cygnus.com)

	* remote-bug.c: rename quiet to bug88k_snoop.
	  (double_scan, multi_scan): generalize double_scan into a scan
	  for multiple patterns.  Rename to multi_scan.
	  (bug_wait, bug_write_inferior_memory): adapt to use the new
	  multi_scan in order to catch and represent target bus errors.
	  (bug_scan): currently unused, so comment out.
	  (bug_quiet): removed.  Replaced with a standard user settable boolean.

	* m88k-tdep.c: remove include of sys/dir.h.  Appears unnecessary
	  and isn't available on solaris.

Mon Aug 23 14:56:42 1993  Jim Kingdon  (kingdon@lioth.cygnus.com)

	* config/m88k/{delta88v4.mt,delta88v4.mh}: New files
	* config/m88k/delta88.mh: Fix comment.
	* config/m88k/tm-delta88.h: Remove unused BCS define.
	* config/m88k/{tm-delta88v4.h,xm-delta88v4.h,nm-delta88v4.h}:
	New files.
	* configure.in: Recognize m88*-motorola-sysv4*.
	* m88k-nat.c: Always include sys/types.h; don't depend on USG.

Mon Aug 23 12:57:42 1993  Peter Schauer  (pes@regent.e-technik.tu-muenchen.de)

	* mipsread.c (parse_symbol, parse_type, cross_ref):  Pass name of
	symbol as an argument and use it in complaints.
	* symmisc.c (dump_psymtab):  Dump filenames of dependencies.

Mon Aug 23 1993  Sean Fagan  (sef@cygnus.com)
		 and Jim Kingdon  (kingdon@cygnus.com)

	Add NetBSD support: