@@ -1,5 +1,7 @@
 Tue Aug 24 00:36:17 1993  Jim Kingdon  (kingdon@lioth.cygnus.com)
 
+	* config/vax/xm-vaxult.h: Define NO_PTRACE_H.
+
 	* target.c, target.h: Add "set remotedebug" command.
 	* remote-bug.c, remote.c, remote-mips.c: Remove "set remotedebug" and
 	"set m88ksnoop" options and use generic "set remotedebug" instead.
